# AM_MIDI2.0Lib

./: CMakeLists.txt  Makefile  README.md  tests.cpp
docs/: Home.md  Profile-Configuration.md  Property-Exchange.md  midiCICreate.md  midiCIProcessor.md  umpMessageCreate.md  umpProcessor.md
include/: UMPtoBytestream.h  bytestreamToUMP.h  bytestreamUMP.h  mcoded7.h  messageCreate.h  midiCIMessageCreate.h  midiCIProcessor.h  umpMessageCreate.h  umpProcessor.h  umpToBytestream.h  umpToMIDI1Protocol.h  umpToMIDI2Protocol.h  utils.h
src/: UMPtoBytestream.cpp  bytestreamToUMP.cpp  bytestreamUMP.cpp  mcoded7.cpp  messageCreate.cpp  midiCIMessageCreate.cpp  midiCIProcessor.cpp  umpMessageCreate.cpp  umpProcessor.cpp  umpToBytestream.cpp  umpToMIDI1Protocol.cpp  utils.cpp
tests/: testMIDICI.cpp  testbadsysex.cpp  tests.cpp
